--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,14 @@
   
   body {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: cornsilk;
-    color: saddlebrown;
+    background-color: rgb(189, 188, 180);
+    color: rgb(218, 164, 132);
   }
   
   h1 {
     font-size: 5rem;
     color: rosybrown;
+    position:relative; left
     line-height: .8;
     margin: 3rem 0 1rem;
   }
@@ -24,9 +25,9 @@
   }
   
   #siteLogo {
-    width: 250px;
+    width: 150px;
     z-index: 2;
-    grid-area: 1 / 1 / 3/ 2;
+    grid-area: 1 / 1 / 2/ 1;
   }
   
   section {
@@ -67,3 +68,17 @@
     font-size: .8rem;
     margin: 1rem;
   }
+ footer{
+  position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: rosybrown;;
+   color: rgb(141, 135, 135);
+   text-align: center;
+  /* font-size: 2rem;
+  color: rosybrown;
+  line-height: .8;
+  margin: 3rem 0 1rem; */
+}
+  
