--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   h1 {
     font-size: 5rem;
     color: rosybrown;
-    position:relative; left
+    position:relative; left;
     line-height: .8;
     margin: 3rem 0 1rem;
   }
