--- a/css/style.css
+++ b/css/style.css
@@ -9,55 +9,55 @@
   }
   
   h1 {
-    font-size: 5rem;
-    color: rosybrown;
-    grid-row-start:1;
+   font-size: 5.5rem;
+    color: darkorange;
+    grid-row-start: 1;
     grid-row-end: 2;
-    line-height: .8;
+    line-height: 1;
     margin: 3rem 0 1rem;
     z-index: 5;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Comic Sans MS', 'Chalkboard SE', 'Marker Felt', cursive, sans-serif;
+    text-shadow: 0 0 10px pink, 0 0 20px pink, 0 0 30px orange, 0 0 40px orange;
+    text-align: center;
   }
   
-  main {
-    width: 1024px;
+   main {
+    max-width: 1024px;
     margin: 3rem auto;
+    margin-left: 50px; /* add margin to move the entire grid to the right */
     display: grid;
-    grid-template-columns: 250px 1fr;
+    grid-template-columns: 100px 1fr; /* decrease width of first column */
     grid-template-rows: 6.5rem 10rem 20rem 40%;
+    text-align: right;
   }
   
   #siteLogo {
-    width: 105px;
+    width: 405px;
     z-index: 2;
-    grid-area: 1 / 1 / 2/ 1;
-    grid-column-start: 2;
+    grid-area: 1 / 1 / 2 / 2;
+    grid-column-start: 1;
     grid-row-start: 1;
-    
+    border-radius: 50%;
+    border: 2px solid #de8f8f;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2), 0px 0px 10px 5px rgba(255, 192, 203, 0.5);
+
   }
   
   section {
-    /* This element will be a grid item, but also a flex container */
     background-color: rgba(211, 187, 176, 0.3);
     padding: 2rem;
-    grid-row-start: 2;
-    grid-row-end: 4;
-    grid-column-start: 1;
-    grid-column-end: 3;
+    grid-row: 2 / 4;
+    grid-column: 2 / 3; /* specify second column for section */
     display: flex;
     justify-content: space-between;
     align-items: stretch;
   }
   
+  /* adjust section image width to be responsive */
   section img {
-    width: 40%;
-    max-height: 26rem;
+    max-width: 100%;
+    max-height: 20rem;
     border: 5px solid transparent;
-  }
-  
-  section img:hover {
-    border: 5px solid rgb(169, 108, 28);
-    cursor: pointer;
   }
   
   ul {
@@ -75,25 +75,27 @@
     font-size: .8rem;
     margin: 1rem;
   }
-  div #chart{
-    grid-area: 4/4/6/6;
-    width:
+  #chartContainer {
+    position: fixed;
+    bottom: 10%;
+    left: 50%;
+    transform: translateX(-50%);
   }
-/* adjust min hight */
-#mychart{
-  min-height: 400px;
-}
- footer{
-  position: fixed;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   background-color: rosybrown;;
-   color: rgb(141, 135, 135);
-   text-align: center;
-  /* font-size: 2rem;
-  color: rosybrown;
-  line-height: .8;
-  margin: 3rem 0 1rem; */
-}
   
+  #myChart {
+    min-height: 200px;
+    width: 100%;
+  }
+
+  footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rosybrown;
+  color: rgb(141, 135, 135);
+  text-align: center;
+  font-size: 3rem;
+  line-height: 0.9;
+  margin-top: 3rem;
+}  
