--- a/css/style.css
+++ b/css/style.css
@@ -1,93 +1,89 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: rgb(185, 184, 180);
-    color: rgb(216, 209, 205);
-  }
-  
-  h1 {
-   font-size: 5.5rem;
-    color: darkorange;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    line-height: 1;
-    margin: 3rem 0 1rem;
-    z-index: 5;
-    font-family: 'Comic Sans MS', 'Chalkboard SE', 'Marker Felt', cursive, sans-serif;
-    text-shadow: 0 0 10px pink, 0 0 20px pink, 0 0 30px orange, 0 0 40px orange;
-    text-align: center;
-  }
-  
-   main {
-    max-width: 1024px;
-    margin: 3rem auto;
-    margin-left: 50px; /* add margin to move the entire grid to the right */
-    display: grid;
-    grid-template-columns: 100px 1fr; /* decrease width of first column */
-    grid-template-rows: 6.5rem 10rem 20rem 40%;
-    text-align: right;
-  }
-  
-  #siteLogo {
-    width: 405px;
-    z-index: 2;
-    grid-area: 1 / 1 / 2 / 2;
-    grid-column-start: 1;
-    grid-row-start: 1;
-    border-radius: 50%;
-    border: 2px solid #de8f8f;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2), 0px 0px 10px 5px rgba(255, 192, 203, 0.5);
+  box-sizing: border-box;
+}
 
-  }
-  
-  section {
-    background-color: rgba(211, 187, 176, 0.3);
-    padding: 2rem;
-    grid-row: 2 / 4;
-    grid-column: 2 / 3; /* specify second column for section */
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-  }
-  
-  /* adjust section image width to be responsive */
-  section img {
-    max-width: 100%;
-    max-height: 20rem;
-    border: 5px solid transparent;
-  }
-  
-  ul {
-    margin: 1rem;
-    grid-column-start: 2;
-  }
-  
-  /* -- button -- */
-  section + div {
-    background-color: rgba(128, 128, 128, 0.734);
-    color: lightgrey;
-    padding: .5rem 1rem;
-    width: max-content;
-    height: max-content;
-    font-size: .8rem;
-    margin: 1rem;
-  }
-  #chartContainer {
-    position: fixed;
-    bottom: 10%;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  
-  #myChart {
-    min-height: 200px;
-    width: 100%;
-  }
+body {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  background-color: rgb(185, 184, 180);
+  color: rgb(216, 209, 205);
+}
 
-  footer {
+h1 {
+  font-size: 5.5rem;
+  color: darkorange;
+  line-height: 1;
+  margin: 3rem 0 1rem;
+  font-family: 'Comic Sans MS', 'Chalkboard SE', 'Marker Felt', cursive, sans-serif;
+  text-shadow: 0 0 10px pink, 0 0 20px pink, 0 0 30px orange, 0 0 40px orange;
+  text-align: center;
+}
+
+main {
+  max-width: 1024px;
+  margin: 3rem auto;
+  margin-left: 50px; /* add margin to move the entire grid to the right */
+  display: grid;
+  grid-template-columns: 150px 1fr; /* decrease width of first column */
+  grid-template-rows: auto auto auto auto;
+  grid-gap: 1rem; /* add space between grid items */
+  text-align: right;
+}
+
+#siteLogo {
+  width: 150px; /* increased width */
+  z-index: 2;
+  grid-row: 1;
+  grid-column: 1;
+  border-radius: 50%;
+  border: 2px solid #de8f8f;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2), 0px 0px 10px 5px rgba(255, 192, 203, 0.5);
+}
+
+section {
+  background-color: rgba(211, 187, 176, 0.3);
+  padding: 2rem;
+  grid-row: 2 / 4;
+  grid-column: 2 / 3; /* specify second column for section */
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+/* adjust section image width to be responsive */
+section img {
+  max-width: 100%;
+  max-height: 20rem;
+  border: 5px solid transparent;
+}
+
+ul {
+  margin: 1rem;
+  grid-column-start: 2;
+}
+
+/* -- button -- */
+section + div {
+  background-color: rgba(128, 128, 128, 0.734);
+  color: lightgrey;
+  padding: .5rem 1rem;
+  width: max-content;
+  height: max-content;
+  font-size: .8rem;
+  margin: 1rem;
+}
+#chartContainer {
+  position: fixed;
+  bottom: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#myChart {
+  min-height: 200px;
+  width: 100%;
+}
+
+footer {
   position: fixed;
   left: 0;
   bottom: 0;
@@ -98,4 +94,4 @@
   font-size: 3rem;
   line-height: 0.9;
   margin-top: 3rem;
-}  
+}
