--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ h1 {
   font-size: 5.5rem;
   color: darkorange;
   line-height: 1;
-  margin: 3rem 0 1rem;
+  margin: 0px;
   font-family: 'Comic Sans MS', 'Chalkboard SE', 'Marker Felt', cursive, sans-serif;
   text-shadow: 0 0 10px pink, 0 0 20px pink, 0 0 30px orange, 0 0 40px orange;
   text-align: center;
